--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
