--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query": "^5.8.9",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.19.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
+    "styled-reset": "^4.5.1",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
