--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "@utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
