--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker-image": "docker build -t rudu-front -f ./Dockerfile.dev .",
+    "docker-run": "docker run -d -p 5173:5173 -v $(pwd):/app -v /app/node_modules rudu-front"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
